2024-12-03
    Debugging, refactoring, and cleaning
2024-10-02
    Using all currencies
2024-09-22
    Improving of next payments
2024-09-10
    Import only RUB or EUR
2024-09-06
    Saving product groups info in a new table
2024-09-03
    Added the ability to add a fixed markup
2024-08-29
    Changed group headline
2024-08-27
    Fixed error 'Function Not Supported by Module'
2024-08-15
    Added the ability to add a markup and round prices
2024-05-17
    Modified database workflow to enhance compatibility with various versions of MySql
2024-05-16
    Modified database workflow to enhance compatibility with various versions of WHMCS.